migrates to openJDK 11